--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,16 +41,19 @@ theme:
   markdown_extensions:
     - pymdownx.highlight:
         anchor_linenums: true
+        line_spans: __span
+        pygments_lang_class: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
+    - pymdownx.superfences
     - admonition
     - pymdownx.arithmatex:
         generic: true
     - footnotes
     - pymdownx.details
-    - pymdownx.superfences
     - pymdownx.mark
     - attr_list
+    - md_in_html
     - pymdownx.emoji:
         emoji_index: !!python/name:materialx.emoji.twemoji
         emoji_generator: !!python/name:materialx.emoji.to_svg
